terraform/security_group.tf
resource "aws_security_group" "minikube" {
  name        = "minikube"
  description = "minikube"
  vpc_id      = data.aws_vpc.default.id

  ingress {
    from_port   = 0
    to_port     = 0
    description = ""
    protocol    = "-1"
    cidr_blocks = ["172.31.0.0/16"]
  }

  ingress {
      from_port   = 0
      to_port     = 0
      description = "Jenkins-master"
      protocol    = "-1"
      cidr_blocks = ["54.216.140.246/32"]
    }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "minikube"
  }
}

resource "aws_security_group" "enableMySQL" {
  name        = "enableMySQL"
  description = "enableMySQL"
  vpc_id      = data.aws_vpc.default.id

  ingress {
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["172.31.0.0/16","89.216.91.235/32"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "enableMySQL"
  }
}

resource "aws_security_group" "enable-ssh" {
  name        = "enable-ssh"
  description = "enable-ssh"
  vpc_id      = data.aws_vpc.default.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["172.31.0.0/16","89.216.91.235/32"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "enable-ssh"
  }
}

resource "aws_security_group" "jenkinsSlave" {
  name        = "jenkinsSlave"
  description = "jenkinsSlave"
  vpc_id      = data.aws_vpc.default.id

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "all"
    cidr_blocks = ["172.31.0.0/16"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "jenkinsSlave"
  }
}

resource "aws_security_group" "JenkinsWebUI" {
  name        = "JenkinsWebUI"
  description = "JenkinsWebUI"
  vpc_id      = data.aws_vpc.default.id

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    description = "JenkinsWebUIHTTP"
    cidr_blocks = ["89.216.91.235/32"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "JenkinsWebUI"
  }
}


resource "aws_security_group" "JenkinsWebhook" {
  name        = "JenkinsWebhook"
  description = "JenkinsWebhook"
  vpc_id      = data.aws_vpc.default.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["140.82.112.0/20","185.199.108.0/22","192.30.252.0/22"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["140.82.112.0/20","185.199.108.0/22","192.30.252.0/22"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["140.82.112.0/20","185.199.108.0/22","192.30.252.0/22"]
  }

  ingress {
    from_port   = 9418
    to_port     = 9418
    protocol    = "tcp"
    cidr_blocks = ["140.82.112.0/20","185.199.108.0/22","192.30.252.0/22"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "JenkinsWebhook"
  }
}

resource "aws_security_group" "haproxy" {
  name        = "haproxy"
  description = "haproxy"
  vpc_id      = data.aws_vpc.default.id

  ingress {
    from_port   = 30010
    to_port     = 30010
    description = "Backend"
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 30020
    to_port     = 30020
    description = "Frontend"
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 9090
    to_port     = 9090
    description = "LetsEncrypt"
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "haproxy"
  }
}
